[gd_scene load_steps=3 format=3 uid="uid://bnuvqilh6jpnu"]

[ext_resource type="Script" path="res://addons/bgs_arcade_cab_essentials/ui/bgs_arcade_cab_ui_options.gd" id="1_d2i1v"]

[sub_resource type="Theme" id="Theme_p4apt"]

[node name="MainUI" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p4apt")

[node name="Game Options" type="Control" parent="." node_paths=PackedStringArray("launch_fullscreen", "hide_cursor", "min_credits", "free_play", "idle_quit_enabled", "idle_quit_timeout")]
layout_mode = 2
script = ExtResource("1_d2i1v")
launch_fullscreen = NodePath("MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/LaunchFullscreen/LaunchFullscreenCheckBox")
hide_cursor = NodePath("MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/HideCursor/HBoxContainer/HideCursorCheckBox")
min_credits = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/MinimumCredits/MinimumCreditsSpinBox")
free_play = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/HBoxContainer/FreePlayCheckBox")
idle_quit_enabled = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Enabled/IdleTimerCheckBox")
idle_quit_timeout = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Timeout/IdleTimeoutSpinBox")

[node name="MarginContainer" type="MarginContainer" parent="Game Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Game Options/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="General" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General"]
layout_mode = 2
bbcode_enabled = true
text = "General Settings"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer"]
layout_mode = 2

[node name="LaunchFullscreen" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/LaunchFullscreen"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Forces the game into fullscreen when launched, overriding the Display Project Settings. (required for deployment on the BGS Arcade Cab)."
mouse_filter = 1
text = "Force Fullscreen"

[node name="LaunchFullscreenCheckBox" type="CheckBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/LaunchFullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen Enabled"

[node name="HideCursor" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/HideCursor"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/HideCursor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Prevents the mouse cursor from being shown in-game (likely what you want on the BGS Arcade Cabinet, as there is no mouse)."
mouse_filter = 1
text = "Hide Cursor"

[node name="HideCursorCheckBox" type="CheckBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/HideCursor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Cursor Hidden"

[node name="Credits" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Credits[/b]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer"]
layout_mode = 2

[node name="MinimumCredits" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/MinimumCredits"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The minimum number of credits (quarters) required to emit the \"credits_redeemed()\" Signal via the \"redeem_credits\" in the CreditsAutoload."
mouse_filter = 1
text = "Minimum Credits"

[node name="MinimumCreditsSpinBox" type="SpinBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/MinimumCredits"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "When enabled, the Credits Autoload will ignore the Minimum Credits value and allow any number of credits entered (even 0) to emit the \"credits_redeemed()\" signal."
mouse_filter = 1
text = "Free Play"

[node name="FreePlayCheckBox" type="CheckBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enabled"

[node name="Idle Quit" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Idle Quit[/b]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer"]
layout_mode = 2

[node name="Enabled" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Enabled"]
layout_mode = 2
size_flags_horizontal = 3
text = "Idle Timer"

[node name="IdleTimerCheckBox" type="CheckBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Enabled"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enabled"

[node name="Timeout" type="HBoxContainer" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Timeout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Timeout"

[node name="IdleTimeoutSpinBox" type="SpinBox" parent="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Timeout"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 300.0
rounded = true
suffix = "seconds"

[node name="Input Actions" type="Control" parent="."]
visible = false
layout_mode = 2

[connection signal="toggled" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/LaunchFullscreen/LaunchFullscreenCheckBox" to="Game Options" method="_on_launch_fullscreen_check_box_toggled"]
[connection signal="toggled" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/General/MarginContainer/VBoxContainer/HideCursor/HBoxContainer/HideCursorCheckBox" to="Game Options" method="_on_hide_cursor_check_box_toggled"]
[connection signal="value_changed" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/MinimumCredits/MinimumCreditsSpinBox" to="Game Options" method="_on_minimum_credits_spin_box_value_changed"]
[connection signal="toggled" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Credits/MarginContainer/VBoxContainer/HBoxContainer/FreePlayCheckBox" to="Game Options" method="_on_free_play_check_box_toggled"]
[connection signal="toggled" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Enabled/IdleTimerCheckBox" to="Game Options" method="_on_idle_timer_check_box_toggled"]
[connection signal="value_changed" from="Game Options/MarginContainer/ScrollContainer/VBoxContainer/Idle Quit/MarginContainer/VBoxContainer/Timeout/IdleTimeoutSpinBox" to="Game Options" method="_on_idle_timeout_spin_box_value_changed"]
